--- a/index.html
+++ b/index.html
@@ -6,109 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shiny Rocks Generator</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #1c1c1c, #3a3a3a);
+            background: #111;
             color: #fff;
-            overflow-x: hidden;
-        }
-
-        .container {
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
             text-align: center;
-            padding: 10px;
         }
 
         h1 {
-            font-size: 3em;
+            font-size: 4em;
             font-weight: 600;
-            margin-bottom: 10px;
-            letter-spacing: 1px;
+            margin-bottom: 20px;
+            letter-spacing: 2px;
         }
 
         h2 {
-            font-size: 1.5em;
+            font-size: 1.2em;
             font-weight: 300;
             margin-top: 0;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
 
         .button {
-            padding: 15px 30px;
-            background-color: #ff6f61;
+            padding: 20px 40px;
+            background-color: #ff8c00;
             border: none;
-            border-radius: 5px;
-            font-size: 1.2em;
-            color: white;
+            border-radius: 50px;
+            font-size: 1.5em;
+            font-weight: 400;
+            text-transform: uppercase;
+            color: #fff;
             cursor: pointer;
             transition: all 0.3s ease;
-            margin: 10px;
         }
 
         .button:hover {
-            background-color: #e55b52;
-            transform: translateY(-2px);
+            background-color: #ff6a00;
+            transform: translateY(-5px);
         }
 
         .footer {
             position: absolute;
-            bottom: 10px;
+            bottom: 20px;
             font-size: 1em;
             font-weight: 300;
+            color: #bbb;
         }
 
         .footer a {
-            color: #ff6f61;
+            color: #ff8c00;
             text-decoration: none;
             transition: color 0.3s ease;
         }
 
         .footer a:hover {
-            color: #e55b52;
-        }
-
-        .animation {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: #ff6f61;
-            animation: bounce 1.5s infinite;
-            margin-top: 20px;
-        }
-
-        @keyframes bounce {
-            0% {
-                transform: translateY(0);
-            }
-
-            50% {
-                transform: translateY(-20px);
-            }
-
-            100% {
-                transform: translateY(0);
-            }
+            color: #ff6a00;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <h1>Shiny Rocks Generator</h1>
-        <h2>Get your shiny rocks now!</h2>
-        <button class="button">Generate Rocks</button>
-        <div class="animation"></div>
-    </div>
+    <h1>Shiny Rocks Generator</h1>
+    <h2>Click below to generate your shiny rocks!</h2>
+    <button class="button">Generate Rocks</button>
     <div class="footer">
-        <p>Made with love by <a href="https://github.com" target="_blank">GitHub</a></p>
+        <p>Made by <a href="https://github.com" target="_blank">GitHub</a></p>
     </div>
 </body>
-
 </html>
